Open all endpoints temporarily to fix 403